--- a/about.html
+++ b/about.html
@@ -6,11 +6,12 @@
 </head>
 
 <body>
-<h1></h1>
+<h1>hello world!!!!</h1>
 
-hello world!!
+i did it!
+
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Sat Nov 21 23:01:59 EET 2015 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Tue Dec  1 11:23:31 EET 2015 <!-- hhmts end -->
 </body> </html>
