todo check content_type

--- a/www/about4.html
+++ b/www/about4.html
@@ -9,9 +9,9 @@
 <h1>hello new world!!!!</h1>
 
 i did it again!
-
+this  is 4th  content data
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Tue Dec  1 11:23:31 EET 2015 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Tue Dec  8 00:20:51 EET 2015 <!-- hhmts end -->
 </body> </html>
