i think closing is soon

--- a/www/404.html
+++ b/www/404.html
@@ -11,12 +11,12 @@ file not found
 
 
 <p align=center>
-<img  src="404.png" alt="ups 404"> 
+<img  src="http://localhost:8888/404.png" alt="ups 404"> 
 </p>
 <p align=center>
 <img  src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQtHyGplyEHmh7pg1DW_YV3kZpPjJ7Bplznqa2scehFUcEBWe-Jbg3yCw" alt="ups 404/2"> 
 </p>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Mon Dec 14 01:39:43 EET 2015 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Mon Dec 14 16:16:08 EET 2015 <!-- hhmts end -->
 </body> </html>
